full slider and product list header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Touch Store</title>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +25,32 @@
                 <i class="fas fa-search"></i>
         </section>
     </header>
+    <main>
+        <section class="slider">
+            <div class="imgsSlider">
+                <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
+                <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/fe5012e39a7d-30.10-destaque-desk-03.png" alt="Imagem2">
+            </div>
+            <section class="sliderComponents btnsSlider">
+                <button><i class="fas fa-angle-left"></i></button>
+                <button><i class="fas fa-angle-right"></i></button>
+            </section>
+            <section class="sliderComponents indexes">
+                <div></div>
+                <div></div>
+            </section>
+        </section>
+        <section class="ProductsList">
+            <h2>PRODUTOS EM PROMOÇÃO</h2>
+            <div class="paragrathWithLines">
+                <div class="line"></div>
+                <p>Confira todos os produtos em promoção desta semana!</p>
+                <div class="line"></div>
+            </div>
+        </section>
+    </main>
+    <footer>
 
+    </footer>
 </body>
 </html>
