--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Touch Store</title>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/headerAndFooter.css">
+    <link rel="stylesheet" href="styles/configs.css">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
