--- a/product.html
+++ b/product.html
@@ -27,17 +27,32 @@
         </section>
     </header>
     <main>
-        <img src="https://lh3.googleusercontent.com/proxy/ZmA_vO03ksltbKRHH6peL6Yo9bAXvePEkOrsO4eufOsXmrRbJSd17MVgKErjGwzaFlenkiViEDvmYlsldnRSnRmLjdyjFUu7LA-CCe9-mQn-" alt="placeholder">
-        <p>
-            <i class="fas fa-door-open"></i>
-            Ver mais produtos
-        </p>
-        <p>Panela Wok Linha Aroma 24cm</p>
-        <p>R$ 29,99</p>
-        <button>
-            ADICIONAR AO CARRINHO
-            <img src="assets/plus_circle.svg" alt="Icone de mais">
-        </button>
+        <section class="imageAndInfos">
+            <img src="https://i.stack.imgur.com/y9DpT.jpg" alt="placeholder">
+            <section class="information">
+                <p>
+                    <img src="assets/open_door.svg" alt="Icone de porta aberta">
+                    Ver mais produtos
+                </p>
+                <h1>Panela Wok Linha Aroma 24cm</h1>
+                <h2>R$ 29,99</h2>
+                <button>
+                    ADICIONAR AO CARRINHO
+                    <img src="assets/plus_circle.svg" alt="Icone de mais">
+                </button>
+                <button>
+                    COMPRAR AGORA
+                    <img src="assets/shopping_bag.svg" alt="Icone de sacola de shopping">
+                </button>
+            </section>
+        </section>
+        <section class="description">
+            <div class="paragrathWithLine">
+                <h2>DESCRIÇÃO</h2>
+                <div></div>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita hic, asperiores aut obcaecati autem recusandae magnam quasi enim error, blanditiis, incidunt culpa dolorum et possimus at excepturi qui maiores nesciunt?</p>
+        </section>
     </main>
     <footer>
         <nav>
