iframes went wrong

--- a/product.html
+++ b/product.html
@@ -5,27 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/product.css">
     <link rel="stylesheet" href="styles/configs.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <title>Touch Store</title>
 </head>
 <body>
-    <header>
-        <h1><a href="index.html">Touch Store</a></h1>
-        <section>
-            <div class="iconCart">
-                <div class="cartQuantity">2</div>
-                <i class="fas fa-shopping-cart"></i>
-            </div>
-                <i class="fas fa-search"></i>
-        </section>
-    </header>
+    <iframe src="components/Header/index.html" width="100%" frameborder="0"></iframe>
     <main>
         <section class="imageAndInfos">
             <img src="https://i.stack.imgur.com/y9DpT.jpg" alt="placeholder">
@@ -34,7 +23,7 @@
                     <img src="assets/open_door.svg" alt="Icone de porta aberta">
                     Ver mais produtos
                 </p>
-                <h1>Panela Wok Linha Aroma 24cm</h1>
+                <h1>-Panela Wok Linha Aroma 24cm</h1>
                 <h2>R$ 29,99</h2>
                 <button>
                     ADICIONAR AO CARRINHO
@@ -54,13 +43,6 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita hic, asperiores aut obcaecati autem recusandae magnam quasi enim error, blanditiis, incidunt culpa dolorum et possimus at excepturi qui maiores nesciunt?</p>
         </section>
     </main>
-    <footer>
-        <nav>
-            <a href="#">INSTAGRAM</a>
-            <a href="#">CARRINHO</a>
-            <a href="#">INÍCIO</a>
-        </nav>
-        <p>Touch Store &copy; 2021</p>
-    </footer>
+    <iframe src="components/Footer/index.html" style="min-height: 104px;" width="100%" frameborder="0"></iframe>
 </body>
 </html>
