buy page complete, but not responsive

--- a/product.html
+++ b/product.html
@@ -29,12 +29,12 @@
     <main>
         <section class="imageAndInfos">
             <figure>
-                <img src="https://i.stack.imgur.com/y9DpT.jpg" alt="placeholder">
+                <img src="https://a-static.mlcdn.com.br/618x463/panela-de-pressao-tramontina-antiaderente-vermelha-45l-vancouver/magazineluiza/212769100/24148cba2f30c32f866685b9a82e991d.jpg" alt="placeholder">
             </figure>
             <section class="information">
                 <div class="informationHeader">
                     <a class="moreProducts" href="#">
-                        <img src="assets/open_door.svg" alt="Icone de porta aberta">
+                        <div></div>
                         Ver mais produtos
                     </a>
                     <h1>Panela Wok Linha Aroma 24cm</h1>
