making img responsive in buy page

--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
     <main>
         <section class="imageAndInfos">
             <figure>
-                <img src="https://a-static.mlcdn.com.br/618x463/panela-de-pressao-tramontina-antiaderente-vermelha-45l-vancouver/magazineluiza/212769100/24148cba2f30c32f866685b9a82e991d.jpg" alt="placeholder">
+                <img src="https://www.apple.com/newsroom/images/product/iphone/standard/apple_iphone-12-spring21_purple_04202021_big.jpg.large.jpg" alt="placeholder">
             </figure>
             <section class="information">
                 <div class="informationHeader">
@@ -37,7 +37,7 @@
                         <div></div>
                         Ver mais produtos
                     </a>
-                    <h1>Panela Wok Linha Aroma 24cm</h1>
+                    <h1>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</h1>
                     <h2>R$ 29,99</h2>
                 </div>
                 <div class="btnsProduct">
