making payment information

--- a/product.html
+++ b/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,7 +29,7 @@
     <main>
         <section class="imageAndInfos">
             <figure>
-                <img src="https://www.apple.com/newsroom/images/product/iphone/standard/apple_iphone-12-spring21_purple_04202021_big.jpg.large.jpg" alt="placeholder">
+                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="placeholder">
             </figure>
             <section class="information">
                 <div class="informationHeader">
