add quantity buttons hover

--- a/shopcart.html
+++ b/shopcart.html
@@ -31,109 +31,103 @@
             <section class="allInfos">
                 <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
                 <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm</p>
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
                     <div class="quantity">
                         <p>R$ 29,99</p>
                         <p>Quantidade:</p>
                         <span>10</span>
-                        <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                        <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                        <div class="quantityIcons">
+                            <figure>
+                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                            </figure>
+                            <figure>
+                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </section>
-            <div class="line"></div>
+            <div class="line productLine"></div>
         </article>
         <article class="product">
             <section class="allInfos">
                 <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
                 <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm</p>
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
                     <div class="quantity">
                         <p>R$ 29,99</p>
                         <p>Quantidade:</p>
                         <span>10</span>
-                        <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                        <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                        <div class="quantityIcons">
+                            <figure>
+                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                            </figure>
+                            <figure>
+                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </section>
-            <div class="line"></div>
+            <div class="line productLine"></div>
         </article>
         <article class="product">
             <section class="allInfos">
                 <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
                 <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm</p>
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
                     <div class="quantity">
                         <p>R$ 29,99</p>
                         <p>Quantidade:</p>
                         <span>10</span>
-                        <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                        <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                        <div class="quantityIcons">
+                            <figure>
+                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                            </figure>
+                            <figure>
+                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </section>
-            <div class="line"></div>
+            <div class="line productLine"></div>
         </article>
         <article class="product">
             <section class="allInfos">
                 <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
                 <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm</p>
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
                     <div class="quantity">
                         <p>R$ 29,99</p>
                         <p>Quantidade:</p>
                         <span>10</span>
-                        <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                        <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                        <div class="quantityIcons">
+                            <figure>
+                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                            </figure>
+                            <figure>
+                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                            </figure>
+                        </div>
                     </div>
                 </div>
             </section>
-            <div class="line"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <p>Quantidade:</p>
-                        <span>10</span>
-                        <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                        <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                    </div>
-                </div>
-            </section>
-            <div class="line"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <p>Quantidade:</p>
-                        <span>10</span>
-                        <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                        <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                    </div>
-                </div>
-            </section>
-            <div class="line"></div>
+            <div class="line productLine"></div>
         </article>
         <section class="paymentInformation">
             <p>
                 600<br>
                 produtos
             </p>
-            <div></div>
+            <div class="line paymentLine"></div>
             <p>R$ 910.000,00</p>
             <button>Finalizar compra</button>
             <button>Limpar carrinho</button>
-            <img src="assets/open_door.svg" alt="Icone de porta aberta">
-            <span>Ver mais produtos</span>
+            <a href="#" class="moreProducts">
+                <div></div>
+                <span>Ver mais produtos</span>
+            </a>
         </section>
     </main>
     <footer>
