making payment information responsive

--- a/shopcart.html
+++ b/shopcart.html
@@ -122,8 +122,10 @@
             </p>
             <div class="line paymentLine"></div>
             <p>R$ 910.000,00</p>
-            <button>Finalizar compra</button>
-            <button>Limpar carrinho</button>
+            <section class="btnsPayment">
+                <button>Finalizar compra</button>
+                <button>Limpar carrinho</button>
+            </section>
             <a href="#" class="moreProducts">
                 <div></div>
                 <span>Ver mais produtos</span>
