only media query payment information, dont work

--- a/shopcart.html
+++ b/shopcart.html
@@ -116,12 +116,14 @@
             <div class="line productLine"></div>
         </article>
         <section class="paymentInformation">
-            <p>
-                600<br>
-                produtos
-            </p>
-            <div class="line paymentLine"></div>
-            <p>R$ 910.000,00</p>
+            <section class="quantityAndPrice">
+                <p>
+                    600<br>
+                    produtos
+                </p>
+                <div class="line paymentLine"></div>
+                <p>R$ 910.000,00</p>
+            </section>
             <section class="btnsPayment">
                 <button>Finalizar compra</button>
                 <button>Limpar carrinho</button>
