making quantity responsive

--- a/shopcart.html
+++ b/shopcart.html
@@ -116,7 +116,13 @@
             <div class="line productLine"></div>
         </article>
         <section class="paymentInformation">
-            <section class="quantityAndPrice">
+            <p>
+                600<br>
+                produtos
+            </p>
+            <div class="line paymentLine"></div>
+            <p>R$ 910.000,00</p>
+            <section class="priceAndQuantityResponsive">
                 <p>
                     600<br>
                     produtos
