--- a/shopcart.html
+++ b/shopcart.html
@@ -27,6 +27,7 @@
         </section>
     </header>
     <main>
+        
         <article class="product">
             <section class="allInfos">
                 <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
@@ -34,81 +35,17 @@
                     <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
                     <div class="quantity">
                         <p>R$ 29,99</p>
-                        <p>Quantidade:</p>
-                        <span>10</span>
-                        <div class="quantityIcons">
-                            <figure>
-                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                            </figure>
-                            <figure>
-                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <p>Quantidade:</p>
-                        <span>10</span>
-                        <div class="quantityIcons">
-                            <figure>
-                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                            </figure>
-                            <figure>
-                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <p>Quantidade:</p>
-                        <span>10</span>
-                        <div class="quantityIcons">
-                            <figure>
-                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                            </figure>
-                            <figure>
-                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <p>Quantidade:</p>
-                        <span>10</span>
-                        <div class="quantityIcons">
-                            <figure>
-                                <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                            </figure>
-                            <figure>
-                                <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                            </figure>
+                        <div class="quantityContainer">
+                            <p>Quantidade:</p>
+                            <span>10</span>
+                            <div class="quantityIcons">
+                                <figure>
+                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                                </figure>
+                                <figure>
+                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                                </figure>
+                            </div>
                         </div>
                     </div>
                 </div>
