product inventory complete

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
         <section>
-            <div class="iconCart">
+            <a href="shopcart.html" title="Carrinho" class="iconCart">
                 <div class="cartQuantity">2</div>
                 <i class="fas fa-shopping-cart"></i>
-            </div>
-                <i class="fas fa-search"></i>
+            </a>
+                <i title="Busca" class="fas fa-search"></i>
         </section>
     </header>
     <main>
@@ -65,9 +65,9 @@
     </main>
     <footer>
         <nav>
-            <a href="#">INSTAGRAM</a>
-            <a href="#">CARRINHO</a>
-            <a href="#">INÍCIO</a>
+            <a target="_blank" rel="external" href="https://www.instagram.com/">INSTAGRAM</a>
+            <a href="shopcart.html">CARRINHO</a>
+            <a href="index.html">INÍCIO</a>
         </nav>
         <p>Touch Store &copy; 2021</p>
     </footer>
