--- a/product.html
+++ b/product.html
@@ -19,11 +19,11 @@
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
         <section>
-            <div class="iconCart">
+            <a href="shopcart.html" title="Carrinho" class="iconCart">
                 <div class="cartQuantity">2</div>
                 <i class="fas fa-shopping-cart"></i>
-            </div>
-                <i class="fas fa-search"></i>
+            </a>
+                <i title="Busca" class="fas fa-search"></i>
         </section>
     </header>
     <main>
@@ -33,7 +33,7 @@
             </figure>
             <section class="information">
                 <div class="informationHeader">
-                    <a class="moreProducts" href="#">
+                    <a href="index.html" class="moreProducts" href="#">
                         <div></div>
                         Ver mais produtos
                     </a>
@@ -57,14 +57,15 @@
                 <h2>DESCRIÇÃO</h2>
                 <div></div>
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita hic, asperiores aut obcaecati autem recusandae magnam quasi enim error, blanditiis, incidunt culpa dolorum et possimus at excepturi qui maiores nesciunt?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita hic, asperiores aut obcaecati autem recusandae magnam quasi enim error, blanditiis, incidunt culpa dolorum et possimus at excepturi qui maiores nesciunt? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit ullam perspiciatis distinctio saepe debitis error adipisci aperiam sed, vel quasi voluptatibus est! Voluptatibus aliquam alias modi animi placeat quasi sit? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio eius eligendi voluptatum impedit rerum expedita, ex temporibus veniam beatae minima porro cumque nulla illum tempora nisi tempore molestiae nesciunt deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus sit nisi at officia voluptate blanditiis. Adipisci deserunt aperiam at voluptatum necessitatibus, omnis perspiciatis et error ad, suscipit laboriosam ab quia.
+            </p>
         </section>
     </main>
     <footer>
         <nav>
-            <a href="#">INSTAGRAM</a>
-            <a href="#">CARRINHO</a>
-            <a href="#">INÍCIO</a>
+            <a target="_blank" rel="external" href="https://www.instagram.com/">INSTAGRAM</a>
+            <a href="shopcart.html">CARRINHO</a>
+            <a href="index.html">INÍCIO</a>
         </nav>
         <p>Touch Store &copy; 2021</p>
     </footer>
