--- a/shopcart.html
+++ b/shopcart.html
@@ -19,15 +19,86 @@
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
         <section>
-            <div class="iconCart">
+            <a href="shopcart.html" title="Carrinho" class="iconCart">
                 <div class="cartQuantity">2</div>
                 <i class="fas fa-shopping-cart"></i>
-            </div>
-                <i class="fas fa-search"></i>
+            </a>
+                <i title="Busca" class="fas fa-search"></i>
         </section>
     </header>
     <main>
-        
+        <article class="product">
+            <section class="allInfos">
+                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
+                <div class="infos">
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
+                    <div class="quantity">
+                        <p>R$ 29,99</p>
+                        <div class="quantityContainer">
+                            <p>Quantidade:</p>
+                            <span>10</span>
+                            <div class="quantityIcons">
+                                <figure>
+                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                                </figure>
+                                <figure>
+                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="line productLine"></div>
+        </article>
+        <article class="product">
+            <section class="allInfos">
+                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
+                <div class="infos">
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
+                    <div class="quantity">
+                        <p>R$ 29,99</p>
+                        <div class="quantityContainer">
+                            <p>Quantidade:</p>
+                            <span>10</span>
+                            <div class="quantityIcons">
+                                <figure>
+                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                                </figure>
+                                <figure>
+                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="line productLine"></div>
+        </article>
+        <article class="product">
+            <section class="allInfos">
+                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
+                <div class="infos">
+                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
+                    <div class="quantity">
+                        <p>R$ 29,99</p>
+                        <div class="quantityContainer">
+                            <p>Quantidade:</p>
+                            <span>10</span>
+                            <div class="quantityIcons">
+                                <figure>
+                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
+                                </figure>
+                                <figure>
+                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="line productLine"></div>
+        </article>
         <article class="product">
             <section class="allInfos">
                 <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
@@ -79,9 +150,9 @@
     </main>
     <footer>
         <nav>
-            <a href="#">INSTAGRAM</a>
-            <a href="#">CARRINHO</a>
-            <a href="#">INÍCIO</a>
+            <a target="_blank" rel="external" href="https://www.instagram.com/">INSTAGRAM</a>
+            <a href="shopcart.html">CARRINHO</a>
+            <a href="index.html">INÍCIO</a>
         </nav>
         <p>Touch Store &copy; 2021</p>
     </footer>
