--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Touch Store</title>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    <script type="module" src="script/index.js" defer></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/configs.css">
