making search input

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Touch Store</title>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script type="module" src="script/index.js" defer></script>
+    <script src="script/global.js" defer></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/configs.css">
@@ -25,6 +26,10 @@
                 <i class="fas fa-shopping-cart"></i>
             </a>
                 <i title="Busca" class="fas fa-search"></i>
+                <div class="searchContainer">
+                    <button><img src="assets/search.svg" alt="Icone de Busca"></button>
+                    <input type="text">
+                </div>
         </section>
     </header>
     <main>
@@ -50,16 +55,7 @@
                 <div class="line"></div>
             </div>
             <section class="products">
-                <article class="product">
-                    <img src="https://lh3.googleusercontent.com/proxy/ZmA_vO03ksltbKRHH6peL6Yo9bAXvePEkOrsO4eufOsXmrRbJSd17MVgKErjGwzaFlenkiViEDvmYlsldnRSnRmLjdyjFUu7LA-CCe9-mQn-" alt="placeholder">
-                    <section class="productInfos">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit</p>
-                        <div class="buttonAndPrice">
-                            <p>R$ 28,99</p>
-                            <button>VER PRODUTO</button>
-                        </div>
-                    </section>
-                </article>
+                
             </section>
         </section>
     </main>
