add search clicks

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <i class="fas fa-shopping-cart"></i>
             </a>
                 <i title="Busca" class="fas fa-search"></i>
-                <div class="searchContainer">
-                    <button><img src="assets/search.svg" alt="Icone de Busca"></button>
-                    <input type="text">
-                </div>
         </section>
+        <div class="searchContainer">
+            <input autofocus type="text">
+            <button><i title="Busca" class="fas fa-search"></i></button>
+        </div>
     </header>
     <main>
         <section class="slider">
@@ -55,7 +55,7 @@
                 <div class="line"></div>
             </div>
             <section class="products">
-                
+                <!--Javascript-->
             </section>
         </section>
     </main>
