--- a/product.html
+++ b/product.html
@@ -25,6 +25,10 @@
             </a>
                 <i title="Busca" class="fas fa-search"></i>
         </section>
+        <div class="searchContainer">
+            <input autofocus type="text">
+            <button><i title="Busca" class="fas fa-search"></i></button>
+        </div>
     </header>
     <main>
         <section class="imageAndInfos">
