trying products events

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <i title="Busca" class="fas fa-search"></i>
         </section>
         <div class="searchContainer">
-            <input autofocus type="text">
+            <input placeholder="Procure algum produto..." type="text">
             <button><i title="Busca" class="fas fa-search"></i></button>
         </div>
     </header>
