--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/configs.css">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link repl="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -20,17 +20,14 @@
 <body>
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
-        <section>
-            <a href="shopcart.html" title="Carrinho" class="iconCart">
-                <div class="cartQuantity">2</div>
-                <i class="fas fa-shopping-cart"></i>
-            </a>
-                <i title="Busca" class="fas fa-search"></i>
-        </section>
         <div class="searchContainer">
             <input placeholder="Procure algum produto..." type="text">
             <button><i title="Busca" class="fas fa-search"></i></button>
         </div>
+        <a href="shopcart.html" title="Carrinho" class="iconCart">
+            <div class="cartQuantity">2</div>
+            <i class="fas fa-shopping-cart"></i>
+        </a>
     </header>
     <main>
         <section class="slider">
