--- a/product.html
+++ b/product.html
@@ -18,15 +18,25 @@
 <body>
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
+        <div class="searchContainer">
+            <input placeholder="Procure algum produto..." type="text">
+            <button><i title="Busca" class="fas fa-search"></i></button>
+        </div>
+        <a href="shopcart.html" title="Carrinho" class="iconCart">
+            <div class="cartQuantity">2</div>
+            <i class="fas fa-shopping-cart"></i>
+        </a>
+    </header>
+    <header class="phoneHeader">
         <section>
+            <h1><a href="index.html">Touch Store</a></h1>
             <a href="shopcart.html" title="Carrinho" class="iconCart">
                 <div class="cartQuantity">2</div>
                 <i class="fas fa-shopping-cart"></i>
             </a>
-                <i title="Busca" class="fas fa-search"></i>
         </section>
         <div class="searchContainer">
-            <input autofocus type="text">
+            <input placeholder="Procure algum produto..." type="text">
             <button><i title="Busca" class="fas fa-search"></i></button>
         </div>
     </header>
