add products in product Page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Touch Store</title>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script type="module" src="script/index.js" defer></script>
-    <script src="script/global.js" defer></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/configs.css">
@@ -22,7 +21,7 @@
         <h1><a href="index.html">Touch Store</a></h1>
         <div class="searchContainer">
             <input placeholder="Procure algum produto..." type="text">
-            <button><i title="Busca" class="fas fa-search"></i></button>
+            <button title="Busca"><i class="fas fa-search"></i></button>
         </div>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
             <div class="cartQuantity">2</div>
