--- a/product.html
+++ b/product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
+    <script type="module" src="script/productPage.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -20,7 +21,7 @@
         <h1><a href="index.html">Touch Store</a></h1>
         <div class="searchContainer">
             <input placeholder="Procure algum produto..." type="text">
-            <button><i title="Busca" class="fas fa-search"></i></button>
+            <button title="Busca"><i class="fas fa-search"></i></button>
         </div>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
             <div class="cartQuantity">2</div>
@@ -42,29 +43,7 @@
     </header>
     <main>
         <section class="imageAndInfos">
-            <figure>
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="placeholder">
-            </figure>
-            <section class="information">
-                <div class="informationHeader">
-                    <a href="index.html" class="moreProducts" href="#">
-                        <div></div>
-                        Ver mais produtos
-                    </a>
-                    <h1>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</h1>
-                    <h2>R$ 29,99</h2>
-                </div>
-                <div class="btnsProduct">
-                    <button class="buttonProduct">
-                        ADICIONAR AO CARRINHO
-                        <img src="assets/plus_circle.svg" alt="Icone de mais">
-                    </button>
-                    <button class="buttonProduct">
-                        COMPRAR AGORA
-                        <img src="assets/shopping_bag.svg" alt="Icone de sacola de shopping">
-                    </button>
-                </div>
-            </section>
+            <!--Javascript-->
         </section>
         <section class="description">
             <div class="descriptionWithLine">
