--- a/shopcart.html
+++ b/shopcart.html
@@ -20,7 +20,7 @@
         <h1><a href="index.html">Touch Store</a></h1>
         <div class="searchContainer">
             <input placeholder="Procure algum produto..." type="text">
-            <button><i title="Busca" class="fas fa-search"></i></button>
+            <button title="Busca"><i class="fas fa-search"></i></button>
         </div>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
             <div class="cartQuantity">2</div>
