--- a/product.html
+++ b/product.html
@@ -43,7 +43,29 @@
     </header>
     <main>
         <section class="imageAndInfos">
-            <!--Javascript-->
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <section class="information">
+                <div class="informationHeader">
+                    <a href="index.html" class="moreProducts" href="#">
+                        <div></div>
+                        Ver mais produtos
+                    </a>
+                    <h1></h1>
+                    <h2>R$ </h2>
+                </div>
+                <div class="btnsProduct">
+                    <button class="buttonProduct">
+                        ADICIONAR AO CARRINHO
+                        <img src="assets/plus_circle.svg" alt="Icone de mais">
+                    </button>
+                    <button class="buttonProduct">
+                        COMPRAR AGORA
+                        <img src="assets/shopping_bag.svg" alt="Icone de sacola de shopping">
+                    </button>
+                </div>
+            </section>
         </section>
         <section class="description">
             <div class="descriptionWithLine">
