add modal on click buy button

--- a/product.html
+++ b/product.html
@@ -60,7 +60,7 @@
                         ADICIONAR AO CARRINHO
                         <img src="assets/plus_circle.svg" alt="Icone de mais">
                     </button>
-                    <button class="buttonProduct">
+                    <button id="buyBtn" class="buttonProduct">
                         COMPRAR AGORA
                         <img src="assets/shopping_bag.svg" alt="Icone de sacola de shopping">
                     </button>
@@ -76,6 +76,14 @@
             </p>
         </section>
     </main>
+    <aside class="modalBackground">
+        <div class="flexModal">
+            <div class="modal">
+                <h2>Compra finalizada com sucesso!</h2>
+                <button>OK</button>
+            </div>
+        </div>
+    </aside>
     <footer>
         <nav>
             <a target="_blank" rel="external" href="https://www.instagram.com/">INSTAGRAM</a>
