product page complete (MAYBE)

--- a/product.html
+++ b/product.html
@@ -84,11 +84,11 @@
                 <div class="quantityAddModal">
                     <button id="modalAddButton"><i class="fas fa-plus"></i></button>
                     <span>1</span>
-                    <button><i class="fas fa-minus"></i></button>
+                    <button id="modalSubsButton"><i class="fas fa-minus"></i></button>
                 </div>
                 <div class="btnsAddModal">
                     <button id="modalCancelBtn">Cancelar</button>
-                    <button>Adicionar</button>
+                    <button id="addButtonToCart">Adicionar</button>
                 </div>
             </div>
             <div class="buyModal">
