--- a/shopcart.html
+++ b/shopcart.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script src="script/header.js" defer></script>
+    <script type="module" src="script/shopcart.js" defer ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
             <button title="Busca"><i class="fas fa-search"></i></button>
         </div>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
-            <div class="cartQuantity">2</div>
+            <div class="cartQuantity">0</div>
             <i class="fas fa-shopping-cart"></i>
         </a>
     </header>
@@ -32,7 +33,7 @@
         <section>
             <h1><a href="index.html">Touch Store</a></h1>
             <a href="shopcart.html" title="Carrinho" class="iconCart">
-                <div class="cartQuantity">2</div>
+                <div class="cartQuantity">0</div>
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </section>
